商城后端代码第n次提交--更新用户接口

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -22,7 +22,7 @@
             <form id="registerForm" onsubmit="return false;" action="##">
                 <div class="login_main center">
                     <div class="login-info">账&nbsp;&nbsp;&nbsp;&nbsp;号:&nbsp;
-                        <input class="login-info-input" type="text" name="username" placeholder="请输入你的手机号" id="username"/>
+                        <input class="login-info-input" type="text" name="username" placeholder="请输入你的账号" id="username"/>
                     </div>
                     <div class="login-info">密&nbsp;&nbsp;&nbsp;&nbsp;码:&nbsp;
                         <input class="login-info-input" type="password" name="password" id="password" placeholder="请输入你的密码"/>
