--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,80 +1,80 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>首页</title>
-</head>
-<body>
-<div>
-    <a th:href="@{/logout}">登出</a>
-    <h2>热门商品</h2>
-    <div id="sub_banner">
-        <!-- 已配置热销商品则显示配置内容 -->
-        <th:block th:unless="${#lists.isEmpty(goods.findAllHots)}">
-            <th:block th:each="hotGoodse : ${goods.findAllHots}">
-                <div class="hot-image">
-                    <a th:href="@{'/product/goods/'+${hotGoodse.goodsId}}">
-                        <img th:src="@{${hotGoodse.tupian}}" th:alt="${hotGoodse.goodsName}">
-                    </a>
-                </div>
-            </th:block>
-        </th:block>
-    </div>
-</div>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>首页</title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<div>-->
+<!--    <a th:href="@{/logout}">登出</a>-->
+<!--    <h2>热门商品</h2>-->
+<!--    <div id="sub_banner">-->
+<!--        &lt;!&ndash; 已配置热销商品则显示配置内容 &ndash;&gt;-->
+<!--        <th:block th:unless="${#lists.isEmpty(goods.findAllHots)}">-->
+<!--            <th:block th:each="hotGoodse : ${goods.findAllHots}">-->
+<!--                <div class="hot-image">-->
+<!--                    <a th:href="@{'/product/goods/'+${hotGoodse.goodsId}}">-->
+<!--                        <img th:src="@{${hotGoodse.tupian}}" th:alt="${hotGoodse.goodsName}">-->
+<!--                    </a>-->
+<!--                </div>-->
+<!--            </th:block>-->
+<!--        </th:block>-->
+<!--    </div>-->
+<!--</div>-->
 
-<div id="flash">
-    <h2>新品上线</h2>
-    <ul>
-        <!-- 已配置新品则显示配置内容 -->
-        <th:block th:unless="${#lists.isEmpty(goods.findAllNews)}">
-            <th:block th:each="newGoods : ${goods.findAllNews}">
-                <li>
-                    <a th:href="@{'/product/goods/'+${newGoods.goodsId}}">
-                        <img th:src="@{${newGoods.tupian}}" th:alt="${newGoods.goodsName}">
-                        <p class="name" th:text="${newGoods.goodsName}">StarseaMall</p>
-                        <p class="item_price" th:text="${newGoods.goodsPrice}">StarseaMall</p>
-                    </a>
-                </li>
-            </th:block>
-        </th:block>
-    </ul>
-</div>
+<!--<div id="flash">-->
+<!--    <h2>新品上线</h2>-->
+<!--    <ul>-->
+<!--        &lt;!&ndash; 已配置新品则显示配置内容 &ndash;&gt;-->
+<!--        <th:block th:unless="${#lists.isEmpty(goods.findAllNews)}">-->
+<!--            <th:block th:each="newGoods : ${goods.findAllNews}">-->
+<!--                <li>-->
+<!--                    <a th:href="@{'/product/goods/'+${newGoods.goodsId}}">-->
+<!--                        <img th:src="@{${newGoods.tupian}}" th:alt="${newGoods.goodsName}">-->
+<!--                        <p class="name" th:text="${newGoods.goodsName}">StarseaMall</p>-->
+<!--                        <p class="item_price" th:text="${newGoods.goodsPrice}">StarseaMall</p>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--            </th:block>-->
+<!--        </th:block>-->
+<!--    </ul>-->
+<!--</div>-->
 
-<div id="recommend">
-    <h2>为你推荐</h2>
-    <a href="##" class="more">查看更多>></a>
-    <ul>
-        <!-- 已配置推荐商品则显示配置内容 -->
-        <th:block th:unless="${#lists.isEmpty(goods.findAllGoods)}">
-            <th:block th:each="recommendGoods : ${goods.findAllGoods}">
-                <li>
-                    <a th:href="@{'/product/goods/'+${recommendGoods.goodsId}}">
-<!--                        <div class="info discount" th:text="${recommendGoods.tag}">-->
-<!--                            新品-->
-<!--                        </div>-->
-                        <img th:src="@{${recommendGoods.tupian}}" th:alt="${recommendGoods.goodsName}">
-                        <p class="name" th:text="${recommendGoods.goodsName}">StarseaMall</p>
-                        <p class="item_price" th:text="${recommendGoods.goodsPrice}">StarseaMall</p>
-                        <p class="counter">猜你喜欢</p>
-                    </a>
-                </li>
-            </th:block>
-        </th:block>
-    </ul>
-</div>
-<div>
-    <a th:href="@{/user}">用户信息查询</a>
-</div>
-<!-- jQuery -->
-<script th:src="@{/admin/plugins/jquery/jquery.min.js}"></script>
-<!-- Bootstrap 4 -->
-<script th:src="@{/admin/plugins/bootstrap/js/bootstrap.bundle.min.js}"></script>
-<script th:src="@{/mall/js/swiper.min.js}" type="text/javascript"></script>
-<script th:src="@{/admin/plugins/sweetalert/sweetalert.min.js}"></script>
-<script th:src="@{/mall/js/index.js}" type="text/javascript"></script>
-<script th:src="@{/mall/js/search.js}" type="text/javascript"></script>
+<!--<div id="recommend">-->
+<!--    <h2>为你推荐</h2>-->
+<!--    <a href="##" class="more">查看更多>></a>-->
+<!--    <ul>-->
+<!--        &lt;!&ndash; 已配置推荐商品则显示配置内容 &ndash;&gt;-->
+<!--        <th:block th:unless="${#lists.isEmpty(goods.findAllGoods)}">-->
+<!--            <th:block th:each="recommendGoods : ${goods.findAllGoods}">-->
+<!--                <li>-->
+<!--                    <a th:href="@{'/product/goods/'+${recommendGoods.goodsId}}">-->
+<!--&lt;!&ndash;                        <div class="info discount" th:text="${recommendGoods.tag}">&ndash;&gt;-->
+<!--&lt;!&ndash;                            新品&ndash;&gt;-->
+<!--&lt;!&ndash;                        </div>&ndash;&gt;-->
+<!--                        <img th:src="@{${recommendGoods.tupian}}" th:alt="${recommendGoods.goodsName}">-->
+<!--                        <p class="name" th:text="${recommendGoods.goodsName}">StarseaMall</p>-->
+<!--                        <p class="item_price" th:text="${recommendGoods.goodsPrice}">StarseaMall</p>-->
+<!--                        <p class="counter">猜你喜欢</p>-->
+<!--                    </a>-->
+<!--                </li>-->
+<!--            </th:block>-->
+<!--        </th:block>-->
+<!--    </ul>-->
+<!--</div>-->
+<!--<div>-->
+<!--    <a th:href="@{/user}">用户信息查询</a>-->
+<!--</div>-->
+<!--&lt;!&ndash; jQuery &ndash;&gt;-->
+<!--<script th:src="@{/admin/plugins/jquery/jquery.min.js}"></script>-->
+<!--&lt;!&ndash; Bootstrap 4 &ndash;&gt;-->
+<!--<script th:src="@{/admin/plugins/bootstrap/js/bootstrap.bundle.min.js}"></script>-->
+<!--<script th:src="@{/mall/js/swiper.min.js}" type="text/javascript"></script>-->
+<!--<script th:src="@{/admin/plugins/sweetalert/sweetalert.min.js}"></script>-->
+<!--<script th:src="@{/mall/js/index.js}" type="text/javascript"></script>-->
+<!--<script th:src="@{/mall/js/search.js}" type="text/javascript"></script>-->
 
 
-</body>
+<!--</body>-->
 
-</html>
+<!--</html>-->
