--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,70 +1,70 @@
-<!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>小米商城-登录</title>
-    <link rel="stylesheet" th:href="@{mall/css/common.css}">
-    <link rel="stylesheet" th:href="@{mall/styles/login.css}">
-    <link rel="stylesheet" th:href="@{mall/styles/header.css}">
-    <link rel="stylesheet" th:href="@{/admin/plugins/sweetalert/sweetalert.css}"/>
-</head>
-<body>
-<div class="top center">
-<!--    <div class="logo center">-->
-<!--        <a href="./index.html" target="_blank"><img src="mall/image/login-logo-2.png" alt="" style="width: 370px"></a>-->
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <title>商城-登录</title>-->
+<!--    <link rel="stylesheet" th:href="@{mall/css/common.css}">-->
+<!--    <link rel="stylesheet" th:href="@{mall/styles/login.css}">-->
+<!--    <link rel="stylesheet" th:href="@{mall/styles/header.css}">-->
+<!--    <link rel="stylesheet" th:href="@{/admin/plugins/sweetalert/sweetalert.css}"/>-->
+<!--</head>-->
+<!--<body>-->
+<!--<div class="top center">-->
+<!--&lt;!&ndash;    <div class="logo center">&ndash;&gt;-->
+<!--&lt;!&ndash;        <a href="./index.html" target="_blank"><img src="mall/image/login-logo-2.png" alt="" style="width: 370px"></a>&ndash;&gt;-->
+<!--&lt;!&ndash;    </div>&ndash;&gt;-->
+<!--</div>-->
+<!--<div class="form center">-->
+<!--    <div class="login">-->
+<!--        <div class="login_center">-->
+<!--            <div class="login_top">-->
+<!--                <div class="left fl">会员登录</div>-->
+<!--                <div class="right fr">您还不是我们的会员？<a href="/register" target="_self">立即注册</a></div>-->
+<!--                <div class="clear"></div>-->
+<!--                <div class="under-line center"></div>-->
+<!--            </div>-->
+<!--            <form id="loginForm" onsubmit="return false;" action="##">-->
+<!--                <div class="login_main center">-->
+<!--                    <div class="login-info">-->
+<!--                        账&nbsp;&nbsp;&nbsp;&nbsp;号:&nbsp;<input class="login-info-input" type="text" name="username" id="username" placeholder="请输入你的账号"/>-->
+<!--                    </div>-->
+<!--                    <div class="login-info">-->
+<!--                        密&nbsp;&nbsp;&nbsp;&nbsp;码:&nbsp;<input class="login-info-input" id="password" type="password" name="password" placeholder="请输入你的密码"/>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="login_submit">-->
+<!--                    <input class="submit" type="submit" onclick="login()" value="立即登录">-->
+<!--                </div>-->
+<!--            </form>-->
+<!--        </div>-->
 <!--    </div>-->
-</div>
-<div class="form center">
-    <div class="login">
-        <div class="login_center">
-            <div class="login_top">
-                <div class="left fl">会员登录</div>
-                <div class="right fr">您还不是我们的会员？<a href="/register" target="_self">立即注册</a></div>
-                <div class="clear"></div>
-                <div class="under-line center"></div>
-            </div>
-            <form id="loginForm" onsubmit="return false;" action="##">
-                <div class="login_main center">
-                    <div class="login-info">
-                        账&nbsp;&nbsp;&nbsp;&nbsp;号:&nbsp;<input class="login-info-input" type="text" name="username" id="username" placeholder="请输入你的账号"/>
-                    </div>
-                    <div class="login-info">
-                        密&nbsp;&nbsp;&nbsp;&nbsp;码:&nbsp;<input class="login-info-input" id="password" type="password" name="password" placeholder="请输入你的密码"/>
-                    </div>
-                </div>
-                <div class="login_submit">
-                    <input class="submit" type="submit" onclick="login()" value="立即登录">
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
+<!--</div>-->
 
-</body>
-<!-- jQuery -->
-<script th:src="@{/admin/plugins/jquery/jquery.min.js}"></script>
-<script th:src="@{/admin/dist/js/public.js}"></script>
-<script th:src="@{/admin/plugins/sweetalert/sweetalert.min.js}"></script>
-<script type="text/javascript">
-    function login() {
-        //验证
-        var params = $("#loginForm").serialize();
-        var url = '/loginByUser';
-        $.ajax({
-            type: 'POST',//方法类型
-            url: url,
-            data: params,
-            success: function (result) {
-                if (result.code == 200) {
-                    window.location.href = '/index';
-                } else {
-                    swal(result.message, {
-                        icon: "error",
-                    });
-                };
-            }
-        });
-    }
+<!--</body>-->
+<!--&lt;!&ndash; jQuery &ndash;&gt;-->
+<!--<script th:src="@{/admin/plugins/jquery/jquery.min.js}"></script>-->
+<!--<script th:src="@{/admin/dist/js/public.js}"></script>-->
+<!--<script th:src="@{/admin/plugins/sweetalert/sweetalert.min.js}"></script>-->
+<!--<script type="text/javascript">-->
+<!--    function login() {-->
+<!--        //验证-->
+<!--        var params = $("#loginForm").serialize();-->
+<!--        var url = '/loginByUser';-->
+<!--        $.ajax({-->
+<!--            type: 'POST',//方法类型-->
+<!--            url: url,-->
+<!--            data: params,-->
+<!--            success: function (result) {-->
+<!--                if (result.code == 200) {-->
+<!--                    window.location.href = '/index';-->
+<!--                } else {-->
+<!--                    swal(result.message, {-->
+<!--                        icon: "error",-->
+<!--                    });-->
+<!--                };-->
+<!--            }-->
+<!--        });-->
+<!--    }-->
 
-</script>
-</html>
+<!--</script>-->
+<!--</html>-->
